# longanisa-maker

./: Dockerfile.django  cloudbuild.yml  db.sqlite3  entrypoint.sh  pyproject.toml  requirements.txt  sausageparty.service  service-create.sh  test.py
controller/: admin.py  models.py  serializers.py  utils.py  views.py
controller/migrations/: 0001_initial.py  0002_appsettings.py  0003_alter_flavor_amount1_alter_flavor_amount2_and_more.py  0004_alter_flavor_amount1_alter_flavor_amount2_and_more.py  0005_devicesettings_remove_flavor_id_alter_flavor_title.py  0006_alter_devicesettings_options.py  0007_actuator.py  0008_remove_flavor_ingredient1_remove_flavor_ingredient2_and_more.py  0009_actuator_tie.py
server/: settings.py  urls.py
